fix viewport on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    position: fixed;
     width: 100%;
     height: 100%;
 }
